examples/argocd-simple/web/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
spec:
  rules:
    - host: web.myproductioncluster.com
      http:
        paths:
          - path: /hello-frontend
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /call-backend
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
